[package]
name = "performascan"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <youremail@example.com>"]
description = "A Rust benchmark tool for performance scanning"
license = "MIT"
repository = "https://github.com/yourusername/performascan"

[dependencies]
criterion = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.7"

[dev-dependencies]
tempfile = "3.5"
assert_cmd = "2.0"

[build-dependencies]
cc = "1.0"